--- a/gamedevweek/.classpath
+++ b/gamedevweek/.classpath
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/ext"/>
-	<classpathentry kind="lib" path="/ext/lib/jogg-0.0.7.jar"/>
-	<classpathentry kind="lib" path="/ext/lib/jorbis-0.0.15.jar"/>
-	<classpathentry kind="lib" path="/ext/lib/lwjgl.jar">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/ext"/>
+	<classpathentry exported="true" kind="lib" path="/ext/lib/jogg-0.0.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="/ext/lib/jorbis-0.0.15.jar"/>
+	<classpathentry exported="true" kind="lib" path="/ext/lib/lwjgl.jar">
 		<attributes>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="ext/lib/native"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/ext/lib/slick.jar" sourcepath="/ext/slick/src">
+	<classpathentry exported="true" kind="lib" path="/ext/lib/slick.jar" sourcepath="/ext/slick/src">
 		<attributes>
 			<attribute name="javadoc_location" value="file://${workspace_loc}/ext/slick/javadoc/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/ext/lib/nifty-slick.jar"/>
-	<classpathentry kind="lib" path="/ext/lib/xmlpull-xpp3-1.1.4c.jar"/>
+	<classpathentry exported="true" kind="lib" path="/home/daniel/dev/GDIG/repos/rgb4/ext/lib/nifty-slick.jar"/>
+	<classpathentry exported="true" kind="lib" path="/home/daniel/dev/GDIG/repos/rgb4/ext/lib/xmlpull-xpp3-1.1.4c.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
