--- a/ext/.classpath
+++ b/ext/.classpath
@@ -10,5 +10,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="lib/slick.jar"/>
+	<classpathentry kind="lib" path="lib/jinput.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
