--- a/gamedevweek/.classpath
+++ b/gamedevweek/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/ext"/>
 	<classpathentry exported="true" kind="lib" path="/ext/lib/jogg-0.0.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="/ext/lib/jorbis-0.0.15.jar"/>
