--- a/gamedevweek/.classpath
+++ b/gamedevweek/.classpath
@@ -17,5 +17,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="/ext/lib/nifty-slick.jar" sourcepath="/nifty"/>
 	<classpathentry kind="lib" path="/ext/lib/xmlpull-xpp3-1.1.4c.jar"/>
+	<classpathentry kind="lib" path="/ext/lib/jinput.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
