--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ gamedev/export
 *.log
 **/nbactions.xml
 gamedevweek/rgbiv/nbactions.xml
+gamedevweek/rgbiv-1.0-SNAPSHOT/*
+gamedevweek/rgbiv-1.0-SNAPSHOT-release.zip
