--- a/gamedevweek/rgbiv/pom.xml
+++ b/gamedevweek/rgbiv/pom.xml
@@ -29,6 +29,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.lwjgl.lwjgl</groupId>
+            <artifactId>lwjgl_util</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>de.fhtrier.gdid.libs</groupId>
             <artifactId>jogg</artifactId>
             <version>0.0.7</version>
